PZ-28,PZ-46 | Native Image (Mac Assembly), Open folder restriction | Added the usage of ZGC in the shared archive generation process, Generates an alert when trying to open folder externally from the context menu in line with extract file functionality